--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FtCl</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     {{content-for 'head'}}
-
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ft-cl.css">
 
@@ -21,5 +20,7 @@
     <script src="assets/ft-cl.js"></script>
 
     {{content-for 'body-footer'}}
+    <script type="text/javascript"> 
+    </script>
   </body>
 </html>
