third design with new pallete

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fashion Talk</title>
+    <title>MY WARDROBE</title>
     <meta name="description" content="">
+    <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     {{content-for 'head'}}
     <link rel="stylesheet" href="assets/vendor.css">
@@ -20,7 +22,5 @@
     <script src="assets/ft-cl.js"></script>
 
     {{content-for 'body-footer'}}
-    <script type="text/javascript"> 
-    </script>
   </body>
 </html>
